src/test/ui/numbers-arithmetic/overflowing-lsh-3.stderr
error: this arithmetic operation will overflow
  --> $DIR/overflowing-lsh-3.rs:7:14
   |
LL |     let _x = 1_u64 << 64;
   |              ^^^^^^^^^^^ attempt to shift left with overflow
   |
note: the lint level is defined here
  --> $DIR/overflowing-lsh-3.rs:4:9
   |
LL | #![deny(arithmetic_overflow, const_err)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

